--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 anyio==4.11.0
 APScheduler==3.11.1
 certifi==2025.11.12
+dotenv==0.9.9
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.11
+jalali_core==1.0.0
+jdatetime==5.2.0
+python-dotenv==1.2.1
 python-telegram-bot==22.5
+pytz==2025.2
 sniffio==1.3.1
 tzlocal==5.3.1
