--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==4.11.0
 APScheduler==3.11.1
 certifi==2025.11.12
 dotenv==0.9.9
+fastapi==0.115.5
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -13,3 +14,4 @@ python-telegram-bot==22.5
 pytz==2025.2
 sniffio==1.3.1
 tzlocal==5.3.1
+uvicorn==0.34.0
